k8s/ingress-tools/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: API_GATEWAY_URL_PLACEHOLDER
    http:
      paths:
      - path: /nexus
        pathType: Prefix
        backend:
          service:
            name: nexus-sonatype-nexus
            port:
              number: 8081
